--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -72,6 +72,8 @@
     "signIn": "Sign In",
     "signingIn": "Signing in...",
     "clear": "Clear",
+      "firstBranch": "First Branch",
+      "secondBranch": "Second Branch",
     "demoCredentials": "Demo Credentials",
     "loginErrorEmpty": "Please enter both username and password",
     "loginFailed": "Login failed",
