--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -1,4 +1,5 @@
 {
+  "welcomeMessage": "Welcome to the Login Page",
   "dashboard": {
     "title": "Translation Hub",
     "subtitle": "Manage translations and language settings",
@@ -9,7 +10,13 @@
     "tipsLanguage": "Change language",
     "tipsTheme": "Cycle themes",
     "tipsSubmit": "Quick submit",
-    "tips13Languages": "13 languages supported"
+    "tips13Languages": "13 languages supported",
+    
+    "sales_vat": "Sales VAT",
+    "expenses": "Expenses",
+    "purchase": "Purchase",
+    "total_expenses": "Total Expenses",
+    "tax_due": "Tax due"
   },
   "app": {
     "name": "My App"
@@ -63,6 +70,10 @@
     "moderator": "Moderator"
   },
   "auth": {
+    "user": {
+      "username": "Username",
+      "password": "Password"
+    },
     "login": "Login",
     "loginSubtitle": "Enter your credentials",
     "username": "Username",
@@ -87,7 +98,7 @@
     "technicalSupport": "For Technical Support",
     "contact1": "0112297553",
     "contact2": "0565100268",
-    "version": "SAMCOTEC v ERP - 3.4.01",
+    "version": "SAMCOTEC v ERP - 4.0.01",
     "copyright": "All Rights Reserved"
   },
   "shortcuts": {
@@ -145,5 +156,10 @@
     "colorPreview": "Color Preview",
     "applied": "applied",
     "themesAvailable": "Light, Dark, Ocean, Forest, Sunset"
+  },
+  "support": {
+    "technicalSupport": "For Technical Support",
+    "contact1": "0112297553",
+    "contact2": "0565100268"
   }
 }
